--- a/userdashboard.html
+++ b/userdashboard.html
@@ -159,15 +159,14 @@ const pages = {
     <input type="text" id="supplySearch" placeholder="Search Supply…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
     <table id="supplyTable">
       <thead>
-        <tr><th>Business Name</th><th>Business Category</th><th>Client</th><th>Pick-up</th><th>Drop-off</th><th>Delivery Time</th><th>Supplier</th><th>Contact No.</th><th>Item Value</th><th>Quality</th><th>Status</th></tr>
+        <tr><th>Business Name</th><th>Business Category</th><th>Supplier</th><th>Pick-up</th><th>Drop-off</th><th>Delivery Time</th><th>Supplier</th><th>Contact No.</th><th>Item Value</th><th>Quality</th><th>Status</th></tr>
       </thead>
       <tbody>
-        <tr><td>Atan's Meat Shop</td><td>MEAT SHOP</td><td>James</td><td>Quezon City</td><td>Las Piñas</td><td>12:00 am - 2:00 pm</td><td>Francis</td><td>0970-567-1136</td><td>₱4,000.00</td><td data-stars="3"></td><td>⛔ Delayed</td></tr>
-        <tr><td>The Daily Grind</td><td>COFFEE SHOP</td><td>Maria</td><td>Makati</td><td>Pasig</td><td>7:00 am - 9:00 am</td><td>Kape Roasters</td><td>0917-888-9999</td><td>₱2,500.00</td><td data-stars="5"></td><td>✅ Completed</td></tr>
-        <tr><td>Floral Haven</td><td>FLOWER SHOP</td><td>Sofia</td><td>Taguig</td><td>Alabang</td><td>10:00 am - 12:00 pm</td><td>Bloom & Petal Farms</td><td>0920-555-4444</td><td>₱3,200.00</td><td data-stars="4"></td><td>✏ In progress</td></tr>
-        <tr><td>Baker's Delight</td><td>BAKERY</td><td>Ramon</td><td>Manila</td><td>Mandaluyong</td><td>3:00 am - 5:00 am</td><td>Flour Millers Inc.</td><td>0998-222-3333</td><td>₱5,000.00</td><td data-stars="5"></td><td>✅ Completed</td></tr>
-        <tr><td>Gadget Hub</td><td>ELECTRONICS</td><td>David</td><td>Pasay</td><td>San Juan</td><td>1:00 pm - 3:00 pm</td><td>Tech Wholesalers</td><td>0977-111-2222</td><td>₱8,500.00</td><td data-stars="0"></td><td>⏳ Not started</td></tr>
-      </tbody>
+        <tr><td>Daisy Poultry</td><td>MEAT SHOP</td><td>James</td><td>Quezon City</td><td>Las Piñas</td><td>12:00 am - 2:00 pm</td><td>Francis</td><td>0970-567-1136</td><td>₱4,000.00</td><td data-stars="3"></td><td>⛔ Delayed</td></tr>
+        <tr><td>Takoyaki Supplier</td><td>SUPPLIES SHOP</td><td>Maria</td><td>Makati</td><td>Pasig</td><td>7:00 am - 9:00 am</td><td>Kape Roasters</td><td>0917-888-9999</td><td>₱2,500.00</td><td data-stars="5"></td><td>✅ Completed</td></tr>
+        <tr><td>Catering Supplies</td><td>CATERING</td><td>Sofia</td><td>Taguig</td><td>Alabang</td><td>10:00 am - 12:00 pm</td><td>Bloom & Petal Farms</td><td>0920-555-4444</td><td>₱3,200.00</td><td data-stars="4"></td><td>✏ In progress</td></tr>
+        <tr><td>Party Rental</td><td>RENTAL SHOP</td><td>Ramon</td><td>Manila</td><td>Mandaluyong</td><td>3:00 am - 5:00 am</td><td>Flour Millers Inc.</td><td>0998-222-3333</td><td>₱5,000.00</td><td data-stars="5"></td><td>✅ Completed</td></tr>
+        </tbody>
     </table>
   `,
 
