--- a/userdashboard.html
+++ b/userdashboard.html
@@ -156,27 +156,163 @@ const pages = {
   `,
 
   Supply: `
-    <h1>Supply Monitoring</h1>
-    <input type="text" id="supplySearch" placeholder="Search Supply…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
-    <table id="supplyTable">
-      <thead>
-        <tr><th>Business Name</th><th>Business Category</th><th>Supplier</th><th>Pick-up</th><th>Drop-off</th><th>Delivery Time</th><th>Report</th><th>Contact No.</th><th>Item Value</th><th>Quality</th><th>Status</th></tr>
-      </thead>
-      <tbody>
-        <tr><td>Daisy Poultry</td><td>MEAT SHOP</td><td>James</td><td>Quezon City</td><td>Las Piñas</td><td>12:00 am - 2:00 pm</td><td>Filed</td><td>0970-567-1136</td><td>₱4,000.00</td><td data-stars="3"></td><td>⛔ Delayed</td></tr>
-        <tr><td>Takoyaki Supplier</td><td>SUPPLIES SHOP</td><td>Maria</td><td>Makati</td><td>Pasig</td><td>7:00 am - 9:00 am</td><td>None</td><td>0917-888-9999</td><td>₱2,500.00</td><td data-stars="5"></td><td>✅ Completed</td></tr>
-        <tr><td>Catering Supplies</td><td>CATERING</td><td>Sofia</td><td>Taguig</td><td>Alabang</td><td>10:00 am - 12:00 pm</td><td>None</td><td>0920-555-4444</td><td>₱3,200.00</td><td data-stars="4"></td><td>✏ In progress</td></tr>
-        <tr><td>Party Rental</td><td>RENTAL SHOP</td><td>Ramon</td><td>Manila</td><td>Mandaluyong</td><td>3:00 am - 5:00 am</td><td>None</td><td>0998-222-3333</td><td>₱5,000.00</td><td data-stars="5"></td><td>✅ Completed</td></tr>
-        </tbody>
-    </table>
-  `,
+  <h1>Supply Monitoring</h1>
+<input type="text" id="supplySearch" placeholder="Search Supply…" style="margin-bottom:1rem;width:100%;padding:.5rem;">
+<table id="supplyTable">
+  <thead>
+    <tr>
+      <th>Ref No.</th>
+      <th>Business Name</th>
+      <th>Business Category</th>
+      <th>Supplier</th>
+      <th>Pick-up</th>
+      <th>Drop-off</th>
+      <th>Delivery Time</th>
+      <th>Report</th>
+      <th>Contact No.</th>
+      <th>Item Value</th>
+      <th>Quality</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="#" class="ref-link">RPT-001</a></td>
+      <td>Daisy Poultry</td>
+      <td>MEAT SHOP</td>
+      <td>James</td>
+      <td>Quezon City</td>
+      <td>Las Piñas</td>
+      <td>12:00 am - 2:00 pm</td>
+      <td>Filed</td>
+      <td>0970-567-1136</td>
+      <td>₱4,000.00</td>
+      <td data-stars="3"></td>
+      <td>⛔ Delayed</td>
+    </tr>
+    <tr>
+      <td><a href="#" class="ref-link">RPT-002</a></td>
+      <td>Takoyaki Supplier</td>
+      <td>SUPPLIES SHOP</td>
+      <td>Maria</td>
+      <td>Makati</td>
+      <td>Pasig</td>
+      <td>7:00 am - 9:00 am</td>
+      <td>None</td>
+      <td>0917-888-9999</td>
+      <td>₱2,500.00</td>
+      <td data-stars="5"></td>
+      <td>✅ Completed</td>
+    </tr>
+    <tr>
+      <td><a href="#" class="ref-link">RPT-003</a></td>
+      <td>Catering Supplies</td>
+      <td>CATERING</td>
+      <td>Sofia</td>
+      <td>Taguig</td>
+      <td>Alabang</td>
+      <td>10:00 am - 12:00 pm</td>
+      <td>None</td>
+      <td>0920-555-4444</td>
+      <td>₱3,200.00</td>
+      <td data-stars="4"></td>
+      <td>✏ In progress</td>
+    </tr>
+    <tr>
+      <td><a href="#" class="ref-link">RPT-004</a></td>
+      <td>Party Rental</td>
+      <td>RENTAL SHOP</td>
+      <td>Ramon</td>
+      <td>Manila</td>
+      <td>Mandaluyong</td>
+      <td>3:00 am - 5:00 am</td>
+      <td>None</td>
+      <td>0998-222-3333</td>
+      <td>₱5,000.00</td>
+      <td data-stars="5"></td>
+      <td>✅ Completed</td>
+    </tr>
+  </tbody>
+</table>
 
   Commodity: `<h1>Commodity and Price Monitoring</h1><p>Commodity content here...</p>`,
   Inspection: `<h1>Inspection and compliance</h1><p>Inspection content here...</p>`,
-  Reports: `<h1>Reports and Dashboard with AI analytic</h1><p>Reports content here...</p>`,
+  Reports: `   <h1>Reports and Dashboard with AI Analytic</h1>
+    <div class="grid">
+      <div class="card">
+        <h3>Vendor Performance Dashboard</h3>
+        <canvas id="vendorChart" height="120"></canvas>
+      </div>
+      <div class="card">
+        <h3>Recent Complaints</h3>
+        <ul>
+          <li>Vendor delayed chicken delivery (Ref: RPT-001)</li>
+          <li>Incomplete Takoyaki supplies (Ref: RPT-002)</li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>AI Chat Support</h3>
+        <button id="chatNowBtn" class="btn">💬 Chat Now</button>
+        <div id="chatboxContainer"></div>
+      </div>
+    </div>
+  `
+};
   Settings: `<h1>Settings</h1><p>Settings content here...</p>`
 };
+function initReports(refNo){
+  // Vendor Performance Chart
+  const ctx=document.getElementById("vendorChart");
+  if(ctx){
+    new Chart(ctx,{
+      type:"bar",
+      data:{
+        labels:["Vendor A","Vendor B","Vendor C"],
+        datasets:[{label:"Performance Score",data:[87,75,92],backgroundColor:"#0a53c1"}]
+      }
+    });
+  }
 
+  // Chat support button
+  const chatBtn=document.getElementById("chatNowBtn");
+  if(chatBtn){
+    chatBtn.onclick=()=>{
+      const container=document.getElementById("chatboxContainer");
+      container.innerHTML=`
+        <div class="chatbox">
+          <div class="chat-messages" id="chatMessages">Welcome! How can I help you?</div>
+          <div class="chat-input">
+            <input type="text" id="chatInput" placeholder="Type a message..." />
+            <button class="btn" id="sendBtn">Send</button>
+          </div>
+        </div>`;
+      document.getElementById("sendBtn").onclick=()=>{
+        const input=document.getElementById("chatInput");
+        const msg=input.value.trim();
+        if(msg){
+          const chat=document.getElementById("chatMessages");
+          chat.innerHTML+=`<div><b>You:</b> ${msg}</div>`;
+          chat.innerHTML+=`<div><b>AI:</b> I'll analyze your request: '${msg}'</div>`;
+          input.value="";
+          chat.scrollTop=chat.scrollHeight;
+        }
+      };
+    };
+  }
+
+  // Highlight complaint if refNo is passed
+  if(refNo){
+    const complaintsList = document.querySelector(".card ul");
+    if(complaintsList){
+      [...complaintsList.children].forEach(item=>{
+        if(item.textContent.includes(refNo)){
+          item.style.background="yellow";
+          item.style.fontWeight="bold";
+        }
+      });
+    }
+  }
+}
 
 function renderStars(td){
   const rating=parseInt(td.dataset.stars)||0;
